# bob-langgraph-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  workflow_visualization.ipynb
docs/: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCKER_IMPLEMENTATION.md  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  TOOL_CALLING_FIX.md  architecture.md  configuration.md  examples.md  getting-started.md
examples/: advanced_examples.py  basic_examples.py  custom_workflows.py
scripts/: build-docker.ps1  deploy.sh  start.ps1
src/: __init__.py  agent.py  api.py  config.py  error_handling.py  main.py  state.py  workflow.py
src/bob_langgraph_agent/: __init__.py  agent.py  api.py  config.py  main.py  state.py  tools.py  workflow.py
tests/: debug_tools.py  test_agent.py  test_api.py  test_error_handling.py  test_simple_chat.py  test_tools.py  test_workflow.py
