[project]
name = "bob-langgraph-agent"
version = "0.1.0"
description = "Beg Ops Buddy - An AI agent built with LangGraph and Anthropic Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
bob-agent = "bob_langgraph_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
